    in preseed.cfg
  * Improved arch detection
  * Strip cpuid binary to reduce size
  * Set the version and revision via the makefile
  * Verify metalink md5 signature using openpgp and python-crypto
  * Check md5 of blobs installed within wine during compilation
  * Skip console logging when running as a packaged executable (pythonw)
  * Use a local 32 bit CD/ISO even if the CPU arch is 64 bit
  * Added license to source files
  * More precise progress reporting
  * Fixed automatic version string generation
  * Preseed user-setup/encrypt-home (thanks Evan Dandrea)
  * Use the old uninstaller, if available, to remove an old installation
  * Editing an existing registry item requires opening the key with a
    special flag
  * Modified uninstaller behaviour, it now uninstalls the directory
    specified in the registry
  * Make sure that the uninstallers of previous versions can be launched
  * Only show the subtask progressbar when the progress is non-zero
  * ConfigParser is not adequate for editing boot.ini, replaced with ad
    hoc implementation
  * Added more registry information, to be displayed in the Control
    Panel
  * Renamed a few variables for code style consistency
  * Fixed typo preventing partial zeroing in virtual disk space
    allocation
  * Stopped console windows from popping up when running commands
  * Added salt to the password hashing algorithm

  [ Hampus Wessman ]
  * Added deletion of temporary directory
  * Fixed archive signature search in unpack.c
  * Removed some debugging code

  [ Agostino Russo ]
  * Fixed regression, a premature deletion of the temporary folder was
    preventing a correct startup
  * Factored out code that looks for archive start
  * Compile grub4dos from source as opposed to using precompiled
    binaries
  * Added source files for grub4dos and grubutil
  * Updated mythbuntu and cdmenu preseed templates

 -- Agostino Russo <agostino.russo@gmail.com>  Tue, 24 Feb 2009 22:38:43 +0000