@@ -141,5 +141,6 @@ wubi (9.04) UNRELEASED; urgency=low
     binaries
   * Added source files for grub4dos and grubutil
   * Updated mythbuntu and cdmenu preseed templates
+  * Added CD-boot-helper functionality
 
- -- Agostino Russo <agostino.russo@gmail.com>  Tue, 24 Feb 2009 22:38:43 +0000
+ -- Agostino Russo <agostino.russo@gmail.com>  Tue, 24 Feb 2009 23:35:26 +0000
